# survey-genie

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  get_design_system.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
survey_genie/: __init__.py
survey_genie/content/: condensed_tlfs_sic_soc.json
survey_genie/templates/: index.html
